--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
-ale_py==0.11.2
-gymnasium==1.2.0
-keras==3.11.3
-matplotlib==3.10.7
-mujoco==3.3.6
 numpy==2.3.4
+matplotlib==3.10.7
+
+keras==3.11.3
 tensorflow==2.20.0
-torch==2.8.0
+
+gymnasium==1.2.0
+ale_py==0.11.2
+mujoco==3.3.6
 gymnasium[mujoco]
+mujoco-python-viewer==0.1.4
+
+torch==2.8.0
